projects/compiler/test/typechecker/try/error_else_type_mismatch.out
Error at %FILE_NAME%:4:38
Type mismatch
  |    val x = try ok() else |e| e.isEmpty()
                                          ^
Expected: Int
but instead found: Bool
