projects/compiler/test/typechecker/try/error_else_type_mismatch.abra
func ok(): Result<Int, String> = Ok(123)

func f1(): Result<Int, Int> {
  val x = try ok() else |e| e.isEmpty()

  Ok(x + 1)
}